#F-284 Fixed Use List.copyOf